# NeriPlayer

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  GITHUB_SYNC_INTEGRATION.md  README.md  README_EN.md  gradle.properties  gradlew.bat  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  suggestion-submission.yml
.github/workflows/: android_ci.yml  (+2 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  README.md  native_crash_handler.cpp  usb_exclusive_bridge.cpp  usb_pcm_codec.cpp  usb_pcm_pipeline.cpp  usb_pcm_pipeline.h
app/src/main/cpp/tests/: usb_iso_transfer_health_test.cpp  usb_pcm_pipeline_test.cpp
app/src/main/cpp/tests/usb/config/: host-gate-contract.md  run-manifest.example.yaml
app/src/main/cpp/tests/usb/exclusive/: usb_runtime_report_v2_test.cpp
app/src/main/cpp/tests/usb/feedback/: usb_explicit_feedback_runtime_test.cpp  usb_feedback_clock_test.cpp
app/src/main/cpp/tests/usb/pcm/: usb_pcm_pipeline_test.cpp
app/src/main/cpp/tests/usb/uac2/: usb_uac2_format_test.cpp
app/src/main/cpp/usb/exclusive/: usb_exclusive_bridge.cpp  usb_runtime_report_v2.cpp  usb_runtime_report_v2.h
app/src/main/cpp/usb/feedback/: usb_explicit_feedback_runtime.cpp  usb_explicit_feedback_runtime.h  usb_feedback_clock.cpp  usb_feedback_clock.h
gradle/: libs.versions.toml
icon/: ic_neri_player_round.xml  ic_neri_player_round_white.xml
ksp-processor/: build.gradle.kts
tools_pub/: adb_full_test.ps1  ytmusic_api_probe.py
(+790 files in other folders)
